--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -37,12 +37,12 @@
   <!-- Barra de navegacion -->
   <nav class="barra-navegacion" role="navigation">
     <div class="nav-wrapper ">
-      <a id="logo-container" href="#" class="brand-logo hide-on-small-only"><img
+      <a id="logo-container" href="/" class="brand-logo hide-on-small-only"><img
           src="{% static '/subastas_app/images/logo.png'%}"" alt="" class=" logo"></a>
 
       <ul class="right">
-        <li><a href="products.html">Categorias</a></li>
-        <li><a href="registro.html" class="">Registro</a></li>
+        <li><a href="categorias/">Categorias</a></li>
+        <li><a href="registro/" class="">Registro</a></li>
         <li><a href="registro.html" class="">Perfil</a></li>
         <li><a class="waves-effect waves-light btn" href="login.html">Login</a></li>
       </ul>
