--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -43,8 +43,14 @@
       <ul class="right">
         <li><a href="categorias/">Categorias</a></li>
         <li><a href="registro/" class="">Registro</a></li>
+        <li><a href="registro/" class="">Ul</a></li>
+        <!-- Condicional si el usuario inisio sesion le muestra la opcion de perfil, sino le muestra la opcion de login -->
+        {% if user.is_authenticated %}
         <li><a href="registro.html" class="">Perfil</a></li>
+        <li><a class="waves-effect waves-light btn  red darken-3" href="logout">Log-out</a></li>
+        {% else %}
         <li><a class="waves-effect waves-light btn" href="login.html">Login</a></li>
+        {% endif %}
       </ul>
     </div>
   </nav>
