--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -43,7 +43,7 @@
       <ul class="right">
         <li><a href="categorias/">Categorias</a></li>
         <li><a href="registro/" class="">Registro</a></li>
-        <li><a href="registro/" class="">Ul</a></li>
+        <li><a href="ofertar/" class="">Ofertar</a></li>
         <!-- Condicional si el usuario inisio sesion le muestra la opcion de perfil, sino le muestra la opcion de login -->
         {% if user.is_authenticated %}
         <li><a href="registro.html" class="">Perfil</a></li>
