--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -46,10 +46,10 @@
         <li><a href="/ofertar/" class="">Ofertar</a></li>
         <!-- Condicional si el usuario inisio sesion le muestra la opcion de perfil, sino le muestra la opcion de login -->
         {% if user.is_authenticated %}
-        <li><a href="registro.html" class="">Perfil</a></li>
-        <li><a class="waves-effect waves-light btn  red darken-3" href="logout">Log-out</a></li>
+        <li><a href="registro.html" class="">{{ user }}</a></li>
+        <li><a class="waves-effect waves-light btn  red darken-3" href="/logout/">Log-out</a></li>
         {% else %}
-        <li><a class="waves-effect waves-light btn" href="login.html">Login</a></li>
+        <li><a class="waves-effect waves-light btn" href="/login/">Login</a></li>
         {% endif %}
       </ul>
     </div>
