--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -34,120 +34,148 @@
   <!-- Inicio de bloque de estructura de barra de navegacion -->
   {% block header %}
 
-  <!-- Barra de navegacion -->
-  <nav class="barra-navegacion" role="navigation">
-    <div class="nav-wrapper ">
-      <a id="logo-container" href="/" class="brand-logo hide-on-small-only"><img
-          src="{% static '/subastas_app/images/logo.png'%}"" alt="" class=" logo"></a>
+  <!-- Dropdown Structure de la seccion Perfil -->
+  <ul id="dropdown1" class="dropdown-content">
+    <li><a href="/">Usuario</a></li>
+    <li><a href="/">Configuracion</a></li>
+    <li><a href="/">Subastas</a></li>
+  </ul>
 
-      <ul class="right">
+  <!-- Barra de navegacion -->
+  <nav role="navigation container">
+    <div class="nav-wrapper">
+      <a id="logo-container" href="/" class="brand-logo">
+        <img src="{% static '/subastas_app//images/logo_small.png' %} " alt="" class="logo">
+      </a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#"></a></li>
         <li><a href="/categorias/">Categorias</a></li>
-        <li><a href="/registro/" class="">Registro</a></li>
-        <li><a href="/ofertar/" class="">Ofertar</a></li>
-        <!-- Condicional si el usuario inisio sesion le muestra la opcion de perfil, sino le muestra la opcion de login -->
+        <li><a href="/registro/">Registro</a></li>
         {% if user.is_authenticated %}
-        <li><a href="registro.html" class="">{{ user }}</a></li>
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">{{ user }}<i
+              class="material-icons right">arrow_drop_down</i></a></li>
         <li><a class="waves-effect waves-light btn  red darken-3" href="/logout/">Log-out</a></li>
         {% else %}
         <li><a class="waves-effect waves-light btn" href="/login/">Login</a></li>
-        {% endif %}
       </ul>
+      {% endif %}
+      <a href="#" data-target="slide-out"" class=" sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+
+  <!-- Slide-out -->
+  <ul id="slide-out" class="sidenav">
+    <li>
+      <div class="user-view">
+        <div class="background">
+          <img src=" {% static '/subastas_app/images/mar.jpg' %}" class="responsive-img">
+        </div>
+        <a href="#user"><img class="circle" src="{% static '/subastas_app/images/anonimo.svg' %} "></a>
+        <a href="#name"><span class="white-text name">Usuario</span></a>
+        <a href="#email"><span class="white-text email"> email</span></a>
+      </div>
+    </li>
+    <li><a class="waves-effect waves-light btn" href="/login/"></i>Login</a></li>
+    <li><a href="/"><i class="material-icons">home</i>Home</a></li>
+    <li><a href="/registro/"><i class="material-icons">person</i>Registrarse</a></li>
+    <li><a href="/categorias/"><i class="material-icons">card_travel</i>Categorias</a></li>
+    <li>
+      <div class="divider"></div>
+    </li>
+    <li><a class="subheader">Subheader</a></li>
+    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+  </ul>
+  <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">face</i></a> -->
+
   {% endblock %}
 
 
   <!-- Inicio de bloque de contenido -->
   {% block content %}
-  <div id="index-banner" class="parallax-container ">
-
-    <div class="section no-pad-bot">
-      <div class="row  container">
-        <div class="col  m6  left-align" id="banner-letters">
-          <h1>Subastas</h1>
-          <h5 class="Invitacion">Registrate y se parte de <br> las mejores subastas <br> Online</h3>
+  <!-- Slider -->
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="{% static '/subastas_app/images/arte.jpg' %}"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>This is our big Tagline!</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
         </div>
-        <div class="row container ">
-          <div class=" col   m6 center-align " id="registro-banner">
-            <div class="input-field col s12 ">
-              <i class="material-icons prefix">account_circle</i>
-              <input id="input-format" type="text" class="validate">
-              <label for="icon_prefix">First Name</label>
-            </div>
-            <div class="input-field col  s12">
-              <i class="material-icons prefix">email</i>
-              <input id="input-format" type="tel" class="validate">
-              <label for="icon_telephone">@email</label>
-              <button class="btn waves-effect waves-light" id="boton-registrarse">Registrarse
-                <i class="material-icons right">send</i>
-              </button>
-
-            </div>
-          </div>
-
-
+      </li>
+      <li>
+        <img src="{% static '/subastas_app/images/carro.jpg' %} "> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Historia sobre ruedas</h3>
+          <h5 class="light grey-text text-lighten-3"> de increibles viajes y anecdotas</h5>
         </div>
-
-      </div>
-    </div>
-    <div class="parallax">
-      <img src="{% static 'subastas_app/images/prism.png'%}" alt="Unsplashed background img 1">
-    </div>
+      </li>
+      <li>
+        <img src="{% static '/subastas_app/images/libros.jpg' %} "> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Right Aligned Caption</h3>
+          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="{% static '/subastas_app/images/viniles.jpg' %} "> <!-- random image -->
+        <div class="caption center-align">
+          <h3>Recuerdos en musica</h3>
+          <h5 class="light grey-text text-lighten-3">Transladate a esos años de musica increible</h5>
+        </div>
+      </li>
+    </ul>
   </div>
 
 
-  <div class="container">
-    <div class="section">
+  <!--   Icon Section   -->
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+        <h5 class="center">Atractivos productos</h5>
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Atractivos productos</h5>
-
-            <p class="light center-align">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempora corporis, neque
-              reiciendis
-              voluptatem commodi, deserunt alias quis repellat quaerat eligendi ducimus illo facilis tenetur nam,
-              rem
-              debitis officia nesciunt.
-            </p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Amplia comunidad</h5>
-
-            <p class="light center-align">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempora corporis, neque
-              reiciendis
-              voluptatem commodi, deserunt alias quis repellat quaerat eligendi ducimus illo facilis tenetur nam,
-              rem
-              debitis officia nesciunt.
-            </p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Plataforma robusta</h5>
-
-            <p class="light center-align">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempora corporis, neque
-              reiciendis
-              voluptatem commodi, deserunt alias quis repellat quaerat eligendi ducimus illo facilis tenetur nam,
-              rem
-              debitis officia nesciunt.
-            </p>
-          </div>
-        </div>
+        <p class="light center-align">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempora corporis, neque
+          reiciendis
+          voluptatem commodi, deserunt alias quis repellat quaerat eligendi ducimus illo facilis tenetur nam,
+          rem
+          debitis officia nesciunt.
+        </p>
       </div>
-
     </div>
+
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+        <h5 class="center">Amplia comunidad</h5>
+
+        <p class="light center-align">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempora corporis, neque
+          reiciendis
+          voluptatem commodi, deserunt alias quis repellat quaerat eligendi ducimus illo facilis tenetur nam,
+          rem
+          debitis officia nesciunt.
+        </p>
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div class="icon-block">
+        <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+        <h5 class="center">Plataforma robusta</h5>
+
+        <p class="light center-align">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit tempora corporis, neque
+          reiciendis
+          voluptatem commodi, deserunt alias quis repellat quaerat eligendi ducimus illo facilis tenetur nam,
+          rem
+          debitis officia nesciunt.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  </div>
   </div>
 
 
@@ -262,13 +290,10 @@
   {% endblock %}
 
   <!-- Inicio delo bloque de script -->
-  {% block java %}
+  {% block javascript %}
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src=" {% static 'subastas_app/js/materialize.js' %} "></script>
-  <script src="{% static 'subastas_app/js/init.js' %}"></script>
-
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script> -->
+  <script src="{% static '/subastas_app/js/init.js' %}"></script>
+  <script src=" {% static '/subastas_app/js/materialize.js' %} "></script>
   {% endblock %}
   <!-- Fin del bloque de Script -->
 </body>
