--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -3,16 +3,15 @@
 <body>
     {% block content %}
     <div class="container section">
-        <h1>Categorias</h1>
+        <h1>Articulos</h1>
 
         <div class="row">
             <!-- Inicio del ciclo for para mostar las categorias -->
-            {% for info in categorias %}
+            {% for info in articulos %}
             <div class="col s12 m6 l4">
                 <div class="card medium">
                     <div class="card-image">
-                        <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}"">
-                   
+                        <!-- <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}""> -->
                     </div>
                     <div class=" card-content">
                         <span class=" card-title">{{info.nombre}}</span>
