--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -51,14 +51,15 @@
         <li><a href="#"></a></li>
         <li><a href="/categorias/">Categorias</a></li>
         <li><a href="/registro/">Registro</a></li>
+        <li><a href="/ofertar/">Ofertar</a></li>
         {% if user.is_authenticated %}
         <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">{{ user }}<i
               class="material-icons right">arrow_drop_down</i></a></li>
         <li><a class="waves-effect waves-light btn  red darken-3" href="/logout/">Log-out</a></li>
         {% else %}
         <li><a class="waves-effect waves-light btn" href="/login/">Login</a></li>
+        {% endif %}
       </ul>
-      {% endif %}
       <a href="#" data-target="slide-out"" class=" sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
@@ -70,8 +71,9 @@
         <div class="background">
           <img src=" {% static '/subastas_app/images/mar.jpg' %}" class="responsive-img">
         </div>
+
         <a href="#user"><img class="circle" src="{% static '/subastas_app/images/anonimo.svg' %} "></a>
-        <a href="#name"><span class="white-text name">Usuario</span></a>
+        <a href="#name"><span class="white-text name"> User </span></a>
         <a href="#email"><span class="white-text email"> email</span></a>
       </div>
     </li>
@@ -85,8 +87,8 @@
     <li><a class="subheader">Subheader</a></li>
     <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
   </ul>
-  <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">face</i></a> -->
 
+  <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">face</i></a> -->
   {% endblock %}
 
 
