--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -11,14 +11,14 @@
             <div class="col s12 m6 l4">
                 <div class="card medium">
                     <div class="card-image">
-                        <!-- <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}""> -->
+                        <img class="responsive-img" id="card-image" src="{{ info.imagen.url }}"">
                     </div>
                     <div class=" card-content">
                         <span class=" card-title">{{info.nombre}}</span>
                         <p>{{ info.descripcion }}</p>
                     </div>
                     <div class="card-action">
-                        <a href="articulos/">Entrar</a>
+                        <a href="categorias/reloj/">Entrar</a>
                     </div>
                 </div>
             </div>
