--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -7,6 +7,7 @@
 
         <div class="row">
             <!-- Inicio del ciclo for para mostar las categorias -->
+            <div class="divider"></div>
             {% for info in articulos %}
             <div class="col s12 m6 l4">
                 <div class="card medium">
@@ -18,12 +19,26 @@
                         <p>{{ info.descripcion }}</p>
                     </div>
                     <div class="card-action">
-                        <a href="categorias/reloj/">Entrar</a>
+                        <a href="#">Entrar</a>
                     </div>
                 </div>
             </div>
             {% endfor %}
         </div>
     </div>
+    <!-- Boton para agregar o editar articulos solo si el usuario esta autenticado-->
+    {% if user.is_authenticated %}
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large red">
+            <i class="large material-icons">mode_edit</i>
+        </a>
+        <ul>
+            <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+            <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+            <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+            <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+        </ul>
+    </div>
+    {% endif %}
     {% endblock %}
 </body>
