--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -29,14 +29,13 @@
     <!-- Boton para agregar o editar articulos solo si el usuario esta autenticado-->
     {% if user.is_authenticated %}
     <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
+        <a class="btn-floating btn-large teal lighten-2">
             <i class="large material-icons">mode_edit</i>
         </a>
         <ul>
-            <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-            <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-            <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-            <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+            <li><a class="btn-floating green darken-1"><i class="material-icons">attach_money</i></a></li>
+            <li><a class="btn-floating  grey darken-1"><i class="material-icons">assignment</i></a></li>
+            <li><a class="btn-floating red" href="agregar_articulo/"><i class="material-icons" >add</i></a></li>
         </ul>
     </div>
     {% endif %}
