--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -35,7 +35,7 @@
   {% block header %}
     <!-- Dropdown Structure de la seccion Perfil -->
     <ul id="dropdown1" class="dropdown-content">
-      <li><a href="/">Usuario</a></li>
+      <li><a href="/perfil/">Usuario</a></li>
       <li><a href="/">Configuracion</a></li>
       <li><a href="/">Subastas</a></li>
     </ul>
@@ -70,9 +70,13 @@
           <div class="background">
             <img src=" {% static '/subastas_app/images/mar.jpg' %}" class="responsive-img">
           </div>
-  
-          <!-- <a href="#user"><img class="circle" src="{% static '/subastas_app/images/anonimo.svg' %} "></a> -->
+          
+          {% if user.is_authenticated %}
           <a href="#user"><img class="circle" src="{{ request.user.image.url }} "></a>
+          {% else %}
+          <a href="#user"><img class="circle" src="{% static '/subastas_app/images/anonimo.svg' %} "></a>
+          {% endif %}
+          <!-- <a href="#user"><img class="circle" src="{{ request.user.image.url }} "></a> -->
   
           <a href="#name"><span class="white-text name"> {{ request.user }} </span></a>
           <a href="#email"><span class="white-text email"> {{ request.user.email }} </span></a>
@@ -80,11 +84,13 @@
       </li>
       {% if user.is_authenticated %}
       <li><a class="waves-effect waves-light btn  red darken-3" href="/logout/">Log-out</a></li>
+      <li><a href="/perfil/"><i class="material-icons">person</i>Perfil</a></li>
       {% else %}
       <li><a class="waves-effect waves-light btn" href="/login/"></i>Login</a></li>
+      <li><a href="/registro/"><i class="material-icons">person</i>Registrarse</a></li>
       {% endif %}
       <li><a href="/"><i class="material-icons">home</i>Home</a></li>
-      <li><a href="/registro/"><i class="material-icons">person</i>Registrarse</a></li>
+      
       <li><a href="/categorias/"><i class="material-icons">card_travel</i>Categorias</a></li>
       <li>
         <div class="divider"></div>
