--- a/subastas_app/templates/subastas_app/categorias.html
+++ b/subastas_app/templates/subastas_app/categorias.html
@@ -11,7 +11,7 @@
             <div class="col s12 m6 l4">
                 <div class="card medium hoverable">
                     <div class="card-image">
-                        <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}"">
+                        <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}">
                    
                     </div>
                     <div class=" card-content">
