Se configura url dinamico para listar los articulos de una categoria

--- a/subastas_app/templates/subastas_app/categorias.html
+++ b/subastas_app/templates/subastas_app/categorias.html
@@ -18,8 +18,11 @@
                         <span class=" card-title">{{info.nombre}}</span>
                         <p>{{ info.descripcion }}</p>
                     </div>
-                    <div class="card-action">
+                    <!-- <div class="card-action">
                         <a href="{{ info.url_name }}">Entrar</a>
+                    </div> -->
+                    <div class="card-action">
+                        <a href="/categorias/{{ info.nombre }}/">Entrar</a>
                     </div>
                 </div>
             </div>
