--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -8,7 +8,7 @@
         <div class="row">
             <!-- Inicio del ciclo for para mostar las categorias -->
             <div class="divider"></div>
-            {% for info in articulos %}
+            {% for info in categoria_articulo %}
             <div class="col s12 m6 l4">
                 <div class="card medium">
                     <div class="card-image">
@@ -24,8 +24,29 @@
                 </div>
             </div>
             {% endfor %}
+
+
+            <!-- {% for info in articulos %}
+            <div class="col s12 m6 l4">
+                <div class="card medium">
+                    <div class="card-image">
+                        <img class="responsive-img" id="card-image" src="{{ info.imagen.url }}"">
+                    </div>
+                    <div class=" card-content">
+                        <span class=" card-title">{{info.nombre}}</span>
+                        <p>{{ info.descripcion }}</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">Entrar</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %} -->
         </div>
     </div>
+
+
+
     <!-- Boton para agregar o editar articulos solo si el usuario esta autenticado-->
     {% if user.is_authenticated %}
     <div class="fixed-action-btn">
@@ -35,7 +56,7 @@
         <ul>
             <li><a class="btn-floating green darken-1"><i class="material-icons">attach_money</i></a></li>
             <li><a class="btn-floating  grey darken-1"><i class="material-icons">assignment</i></a></li>
-            <li><a class="btn-floating red" href="agregar_articulo/"><i class="material-icons" >add</i></a></li>
+            <li><a class="btn-floating red" href="agregar_articulo/"><i class="material-icons">add</i></a></li>
         </ul>
     </div>
     {% endif %}
