Configuracion de vista de pagina de subastas de articulos

--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -19,7 +19,7 @@
                         <p>{{ info.descripcion }}</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">Entrar</a>
+                        <a href="/subasta/{{ info.id }}">Entrar</a>
                     </div>
                 </div>
             </div>
