--- a/subastas_app/templates/subastas_app/login.html
+++ b/subastas_app/templates/subastas_app/login.html
@@ -11,7 +11,7 @@
             </div>
 
             <div class="card-panel ">
-                <form action="" method="post">
+                <form action="" method="POST">
                     {% csrf_token %}
                     <div class=" input-field l4">
                         <i class="material-icons prefix">account_circle</i>
