--- a/subastas_app/templates/subastas_app/registro.html
+++ b/subastas_app/templates/subastas_app/registro.html
@@ -11,6 +11,7 @@
 
       <form class="col s12" action="" method="post">
         {% csrf_token %}
+        {{ form.as_p }}
         <div class="col s12 center">
           <h3><i class="black-text center"></i></h3>
           <h4>Registro</h4>
