--- a/subastas_app/templates/subastas_app/articulos.html
+++ b/subastas_app/templates/subastas_app/articulos.html
@@ -56,7 +56,7 @@
         <ul>
             <li><a class="btn-floating green darken-1"><i class="material-icons">attach_money</i></a></li>
             <li><a class="btn-floating  grey darken-1"><i class="material-icons">assignment</i></a></li>
-            <li><a class="btn-floating red" href="agregar_articulo/"><i class="material-icons">add</i></a></li>
+            <li><a class="btn-floating red" href="/registar_articulo/"><i class="material-icons">add</i></a></li>
         </ul>
     </div>
     {% endif %}
