--- a/subastas_app/templates/subastas_app/categorias.html
+++ b/subastas_app/templates/subastas_app/categorias.html
@@ -7,6 +7,7 @@
 
         <div class="row">
             <!-- Inicio del ciclo for para mostar las categorias -->
+            <div class="divider"></div>
             {% for info in categorias %}
             <div class="col s12 m6 l4">
                 <div class="card medium hoverable">
