Se optimiza la visualizacion em mobiles. Funcion correcta de ofertar y actualizacion de valo de ultima puja

--- a/subastas_app/static/subastas_app/css/style.css
+++ b/subastas_app/static/subastas_app/css/style.css
@@ -20,6 +20,10 @@ nav {
   padding-left: 10px;
 }
 
+#division{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 
 nav ul li:hover {
   background-color: #7a7171d0;
