--- a/subastas_app/templates/subastas_app/index.html
+++ b/subastas_app/templates/subastas_app/index.html
@@ -108,10 +108,10 @@
     <div class="slider">
       <ul class="slides">
         <li>
-          <img src="{% static '/subastas_app/images/arte.jpg' %}"> <!-- random image -->
-          <div class="caption center-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <img src="{% static '/subastas_app/images/arte.jpg' %}"> <!--  image -->
+          <div class="caption left-align">
+            <h3>Colecciones de arte!</h3>
+            <h5 class="light grey-text text-lighten-3">Encuentra el articulo perfecto para tu coleccion.</h5>
           </div>
         </li>
         <li>
@@ -123,9 +123,9 @@
         </li>
         <li>
           <img src="{% static '/subastas_app/images/libros.jpg' %} "> <!-- random image -->
-          <div class="caption right-align">
-            <h3>Right Aligned Caption</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <div class="caption left-align">
+            <h3>Historias del pasado</h3>
+            <h5 class="light grey-text text-lighten-3">Completa tu coleccion con el libro</h5>
           </div>
         </li>
         <li>
