--- a/subastas_app/templates/subastas_app/login.html
+++ b/subastas_app/templates/subastas_app/login.html
@@ -5,7 +5,7 @@
 
 <div class="container ">
     <div class="row">
-        <div class="col l6 offset-l3">
+        <div class="col  m10 l6 offset-l3 offset-m1">
             <div class="l6 center-align">
                 <h4>Inicio de sesion</h4>
             </div>
@@ -38,6 +38,11 @@
                     <div class="center-align">
                         <button class="btn center-align" type="submit"><i
                                 class="material-icons right">send</i>Enviar</button>
+                    </div>
+                    <div class="section">
+                        <div class="center-align">
+                            <a href="/registro/">¿No estas registrado aun?</a>
+                        </div>
                     </div>
                 </form>
             </div>
