--- a/subastas_app/templates/subastas_app/categorias.html
+++ b/subastas_app/templates/subastas_app/categorias.html
@@ -8,26 +8,28 @@
         <div class="row">
             <!-- Inicio del ciclo for para mostar las categorias -->
             <div class="divider"></div>
-            {% for info in categorias %}
-            <div class="col s11 m6 l4">
-                <div class="card medium hoverable">
-                    <div class="card-image">
-                        <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}">
-                   
-                    </div>
-                    <div class=" card-content">
-                        <span class=" card-title">{{info.nombre}}</span>
-                        <p>{{ info.descripcion }}</p>
-                    </div>
-                    <!-- <div class="card-action">
+            <div class="section">
+                {% for info in categorias %}
+                <div class="col s11 m6 l4">
+                    <div class="card medium hoverable">
+                        <div class="card-image">
+                            <img class="responsive-img" id="card-image" src="{{ info.category_image.url }}">
+
+                        </div>
+                        <div class=" card-content">
+                            <span class=" card-title">{{info.nombre}}</span>
+                            <p>{{ info.descripcion }}</p>
+                        </div>
+                        <!-- <div class="card-action">
                         <a href="{{ info.url_name }}">Entrar</a>
                     </div> -->
-                    <div class="card-action">
-                        <a href="/categorias/{{ info.nombre }}/">Entrar</a>
+                        <div class="card-action">
+                            <a href="/categorias/{{ info.nombre }}/">Entrar</a>
+                        </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
     </div>
     {% endblock %}
